# podcast-dl

./: Cargo.toml  LICENSE  README.md  setup.py
podcastdl/: arguments.py  download.py  main.py  networking.py  podcast.py  search.py
src/: args.rs  error.rs  logging.rs  main.rs
src/feed/: mod.rs
src/feed/parse/: mod.rs  rss.rs
src/feed/strategy/: create.rs  execute.rs  mod.rs
src/output/: episode_iterator.rs  formatting.rs  mod.rs  write_options.rs
src/search/: mod.rs  search_engines.rs
