[package]
name = "podcast-dl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.23"
url = "2.3.1"
rt-format = "^0.3"
# Downloading
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11" }
bytes = { version = "1.1" }
# Cli
structopt = { version = "0.3" }
# Error Handling
thiserror = "1.0"
displaydoc = "0.2"
# Logging
log = "0.4"
fern = "0.6"
colored = "^2.0"
# Parsing
rss = "2.0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "^1.0"
scraper = "0.13"
